--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,4 @@ kivy_garden.draggable>=0.1,<0.2
 https://github.com/kivymd/KivyMD/archive/master.zip
 requests
 datetime
-sounddevice
-soundfile
-scipy
+pyaudio
